...
          )}
          <Captioned caption={loc.advancedSettingsAddKeyboardDescription}>
            <ListItem
              testID={TestID.SettingsAddKeyboardRow}
              iconLeading={leading("globe")}
              title={loc.advancedSettingsAddKeyboardTitle}
              titleTrailing="EN"
              titleTrailingColor={secondary}
              iconTrailing={
                <Icon
                  name="chevron_right"
                  size={24}
                  color={theme.colors.textSecondary}
...
